--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,6 +9,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "print(torch.version.cuda)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -55,22 +73,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3772581982.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    for OBJ in USB; do\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "BASE_DIR=\"/media/qil/DATA/Carter_Articulated_Objects/real2code_experiments/data/partnet-mobility-v0\"\n",
+    "BASE_DIR=\"/media/qil/DATA/Carter_Articulated_Objects/real2code_experiments/data/partnet-mobility\"\n",
     "DATA_SPLIT=\"test\"\n",
-    "for OBJ in Pen; do\n",
+    "for OBJ in Mouse; do\n",
     "    export MB_DATADIR=\"${BASE_DIR}/${DATA_SPLIT}/${OBJ}\"\n",
     "    echo \"Processing object category: ${OBJ}\"\n",
     "    echo \"MB_DATADIR is set to: ${MB_DATADIR}\"\n",
     "    \n",
     "    for FOLDER in \"${MB_DATADIR}\"/*; do \n",
-    "        echo \"   processing object#   : $FOLDER\"  \n",
-    "        blenderproc run --custom-blender-path /media/qil/DATA/Carter_Articulated_Objects/blender-3.3.1-linux-x64 blender_render.py --data_dir \"$BASE_DIR\" --split \"$DATA_SPLIT\" --folder \"$FOLDER\" --num_loops 3 --num_frames 3 -o\n",
+    "        echo \"  processing object#   : $FOLDER\"  \n",
+    "        blenderproc run  --custom-blender-path /media/qil/DATA/Carter_Articulated_Objects/blender-3.3.1-linux-x64 blender_render.py  --data_dir \"$BASE_DIR\" --split \"$DATA_SPLIT\" --folder \"$FOLDER\" --num_loops 3 --num_frames 100 -o\n",
     "    done\n",
-    "done"
+    "done\n",
+    "\n",
+    "BASE_DIR=\"/media/qil/DATA/Carter_Articulated_Objects/real2code_experiments/data/partnet-mobility\"\n",
+    "DATA_SPLIT=\"test\"\n",
+    "for OBJ in Mouse; do\n",
+    "    export MB_DATADIR=\"${BASE_DIR}/${DATA_SPLIT}/${OBJ}\"\n",
+    "    echo \"Processing object category: ${OBJ}\"\n",
+    "    echo \"MB_DATADIR is set to: ${MB_DATADIR}\"\n",
+    "    \n",
+    "    for FOLDER in 101399; do \n",
+    "        echo \"  processing object#   : $FOLDER\"  \n",
+    "        blenderproc run  --custom-blender-path /media/qil/DATA/Carter_Articulated_Objects/blender-3.3.1-linux-x64 blender_render.py  --data_dir \"$BASE_DIR\" --split \"$DATA_SPLIT\" --folder \"$FOLDER\" --num_loops 3 --num_frames 100 -o\n",
+    "    done\n",
+    "done\n",
+    "\n",
+    "# Bottle Dispenser Kettle Knife Lamp Lighter Mouse Pen Pliers Scissors Toaster USB"
    ]
   },
   {
